// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navigation drawer examples > Alternate navigation drawer should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="alternate-navigation-drawer"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-alternate v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="alternate-navigation-drawer-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Alternate drawer"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="alternate-navigation-drawer-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="alternate-navigation-drawer-account-sub-menu"
          >
            <li
              class="v-tab"
              id="alternate-navigation-drawer-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="alternate-navigation-drawer-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Alternate navigation drawer with active element should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="alternate-navigation-drawer-with-active-element"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-alternate v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="alternate-navigation-drawer-with-active-element-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Alternate drawer with active element"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              aria-current="page"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="alternate-navigation-drawer-with-active-element-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="alternate-navigation-drawer-with-active-element-account-sub-menu"
          >
            <li
              class="v-tab"
              id="alternate-navigation-drawer-with-active-element-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="alternate-navigation-drawer-with-active-element-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Alternate navigation drawer with icons should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="alternate-navigation-drawer-with-icons"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-alternate v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="alternate-navigation-drawer-with-icons-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Alternate drawer with icons"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-statistics"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
                />
                <path
                  class="v-icon-primary"
                  d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
                />
              </svg>
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-settings"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M9 8.99609H7V6.99609H9V8.99609Z"
                />
                <path
                  class="v-icon-primary"
                  d="M8 0C8.3619 0 8.71822 0.0237607 9.06738 0.0703125L9.55469 2.07812C9.70857 2.71187 10.3994 3.03398 10.9746 2.77344L11.0879 2.71289L12.8516 1.63867C13.4195 2.07245 13.9275 2.58053 14.3613 3.14844L13.2871 4.91211C12.9252 5.50616 13.2459 6.28118 13.9219 6.44531L15.9297 6.93262C15.9762 7.28178 16 7.63811 16 8C16 8.36189 15.9762 8.71823 15.9297 9.06738L13.9219 9.55469C13.2459 9.71882 12.9252 10.4938 13.2871 11.0879L14.3613 12.8516C13.9275 13.4195 13.4195 13.9275 12.8516 14.3613L11.0879 13.2871C10.4938 12.9252 9.71882 13.2459 9.55469 13.9219L9.06738 15.9297L8.80469 15.96C8.54004 15.9864 8.2716 16 8 16C7.7284 16 7.45996 15.9864 7.19531 15.96L6.93262 15.9297L6.44531 13.9219C6.28118 13.2459 5.50616 12.9252 4.91211 13.2871L3.14844 14.3613C2.65147 13.9817 2.20034 13.5452 1.80469 13.0615L1.63867 12.8516L2.71289 11.0879C3.07483 10.4938 2.75411 9.71882 2.07812 9.55469L0.0703125 9.06738C0.0237615 8.71823 8.6093e-07 8.36189 0 8C0 7.7284 0.0136078 7.45995 0.0400391 7.19531L0.0703125 6.93262L2.07812 6.44531C2.7541 6.28118 3.07481 5.50616 2.71289 4.91211L1.63867 3.14844C2.07245 2.58053 2.58053 2.07245 3.14844 1.63867L4.91211 2.71289C5.46893 3.05214 6.18459 2.79185 6.40723 2.20117L6.44531 2.07812L6.93262 0.0703125C7.28178 0.0237608 7.6381 1.40882e-07 8 0ZM8 5C6.34315 5 5.00001 6.34315 5 8C5 9.65685 6.34315 11 8 11C9.65685 11 11 9.65685 11 8C11 6.34316 9.65685 5 8 5Z"
                />
              </svg>
              L1 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-security"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8.09766 5.0166C8.38023 5.35764 8.72768 5.62943 9.1123 5.82031C9.66063 6.09235 10.2864 6.2011 10.9121 6.11719C10.9587 6.11116 11 6.14734 11 6.19434V6.45117C11 6.54443 10.9981 6.6378 10.9941 6.73047C10.9738 7.2018 10.9015 7.66501 10.7822 8.1123C10.78 8.12062 10.7776 8.12939 10.7754 8.1377C10.3631 9.65803 9.4015 10.9962 8.04395 11.8701C8.01739 11.8872 7.98261 11.8872 7.95605 11.8701C6.5985 10.9962 5.63687 9.65803 5.22461 8.1377C5.22236 8.12939 5.21999 8.12062 5.21777 8.1123C5.09847 7.66501 5.02623 7.2018 5.00586 6.73047C5.00186 6.6378 5 6.54443 5 6.45117V6.19434C5.00003 6.14734 5.04133 6.11116 5.08789 6.11719C5.71365 6.2011 6.33937 6.09235 6.8877 5.82031C7.27232 5.62943 7.61977 5.35764 7.90234 5.0166L8 4.89844L8.09766 5.0166ZM8 7.49414C7.75154 7.63307 7.49212 7.75105 7.22461 7.84668C7.39472 8.36103 7.6576 8.84078 8 9.26074C8.3424 8.84078 8.60528 8.36103 8.77539 7.84668C8.50788 7.75105 8.24846 7.63308 8 7.49414Z"
                />
                <path
                  class="v-icon-primary"
                  d="M9.75586 1.4491C10.4158 2.24548 11.4397 2.64613 12.4648 2.50867L15 2.16882V6.67078C15 9.73129 13.4446 12.5826 10.8711 14.2391L8.54102 15.7382H7.45898L5.12891 14.2391C2.55543 12.5826 1 9.73129 1 6.67078V2.16882L3.53516 2.50867C4.56027 2.64613 5.5842 2.24548 6.24414 1.4491L7.22949 0.259644H8.77051L9.75586 1.4491ZM7.78418 2.72546C6.68428 4.05269 4.97801 4.7202 3.26953 4.49109L3 4.45496V6.67078C3 9.05117 4.20936 11.2691 6.21094 12.5575L8 13.7089L9.78906 12.5575C11.7906 11.2691 13 9.05116 13 6.67078V4.45496L12.7305 4.49109C11.022 4.7202 9.31572 4.05269 8.21582 2.72546L8 2.46472L7.78418 2.72546Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="15.9989"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-notes"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M10 12H6V10H10V12ZM10 8H6V6H10V8Z"
                />
                <path
                  class="v-icon-primary"
                  d="M5 2H7V0H9V2H11V0H13V2H14V16H2V6H4V14H12V4H2V2H3V0H5V2Z"
                />
              </svg>
              L1 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-support-ticket"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M10 9.99609H8V5.99609H10V9.99609Z"
                />
                <path
                  class="v-icon-primary"
                  d="M16 1.99609V6.99609H15C14.4477 6.99609 14 7.44381 14 7.99609C14 8.54838 14.4477 8.99609 15 8.99609H16V13.9961H0V8.99609H1C1.55228 8.99609 2 8.54838 2 7.99609C2 7.44381 1.55228 6.99609 1 6.99609H0V1.99609H16ZM2 5.16699C3.16516 5.57885 4 6.6899 4 7.99609C4 9.30229 3.16516 10.4133 2 10.8252V11.9961H14V10.8252C12.8348 10.4133 12 9.30229 12 7.99609C12 6.6899 12.8348 5.57885 14 5.16699V3.99609H2V5.16699Z"
                />
              </svg>
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="alternate-navigation-drawer-with-icons-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="alternate-navigation-drawer-with-icons-account-sub-menu"
          >
            <li
              class="v-tab"
              id="alternate-navigation-drawer-with-icons-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="alternate-navigation-drawer-with-icons-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Default navigation drawer should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="default-navigation-drawer"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="default-navigation-drawer-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Default drawer"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="default-navigation-drawer-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="default-navigation-drawer-account-sub-menu"
          >
            <li
              class="v-tab"
              id="default-navigation-drawer-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="default-navigation-drawer-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Navigation drawer with active element should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="navigation-drawer-with-active-element"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="navigation-drawer-with-active-element-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Drawer with active element"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              aria-current="page"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              aria-current="false"
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="navigation-drawer-with-active-element-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="navigation-drawer-with-active-element-account-sub-menu"
          >
            <li
              class="v-tab"
              id="navigation-drawer-with-active-element-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="navigation-drawer-with-active-element-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Navigation drawer with icons should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="navigation-drawer-with-icons"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="navigation-drawer-with-icons-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Drawer with icons"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-statistics"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
                />
                <path
                  class="v-icon-primary"
                  d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
                />
              </svg>
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-settings"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M9 8.99609H7V6.99609H9V8.99609Z"
                />
                <path
                  class="v-icon-primary"
                  d="M8 0C8.3619 0 8.71822 0.0237607 9.06738 0.0703125L9.55469 2.07812C9.70857 2.71187 10.3994 3.03398 10.9746 2.77344L11.0879 2.71289L12.8516 1.63867C13.4195 2.07245 13.9275 2.58053 14.3613 3.14844L13.2871 4.91211C12.9252 5.50616 13.2459 6.28118 13.9219 6.44531L15.9297 6.93262C15.9762 7.28178 16 7.63811 16 8C16 8.36189 15.9762 8.71823 15.9297 9.06738L13.9219 9.55469C13.2459 9.71882 12.9252 10.4938 13.2871 11.0879L14.3613 12.8516C13.9275 13.4195 13.4195 13.9275 12.8516 14.3613L11.0879 13.2871C10.4938 12.9252 9.71882 13.2459 9.55469 13.9219L9.06738 15.9297L8.80469 15.96C8.54004 15.9864 8.2716 16 8 16C7.7284 16 7.45996 15.9864 7.19531 15.96L6.93262 15.9297L6.44531 13.9219C6.28118 13.2459 5.50616 12.9252 4.91211 13.2871L3.14844 14.3613C2.65147 13.9817 2.20034 13.5452 1.80469 13.0615L1.63867 12.8516L2.71289 11.0879C3.07483 10.4938 2.75411 9.71882 2.07812 9.55469L0.0703125 9.06738C0.0237615 8.71823 8.6093e-07 8.36189 0 8C0 7.7284 0.0136078 7.45995 0.0400391 7.19531L0.0703125 6.93262L2.07812 6.44531C2.7541 6.28118 3.07481 5.50616 2.71289 4.91211L1.63867 3.14844C2.07245 2.58053 2.58053 2.07245 3.14844 1.63867L4.91211 2.71289C5.46893 3.05214 6.18459 2.79185 6.40723 2.20117L6.44531 2.07812L6.93262 0.0703125C7.28178 0.0237608 7.6381 1.40882e-07 8 0ZM8 5C6.34315 5 5.00001 6.34315 5 8C5 9.65685 6.34315 11 8 11C9.65685 11 11 9.65685 11 8C11 6.34316 9.65685 5 8 5Z"
                />
              </svg>
              L1 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-security"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8.09766 5.0166C8.38023 5.35764 8.72768 5.62943 9.1123 5.82031C9.66063 6.09235 10.2864 6.2011 10.9121 6.11719C10.9587 6.11116 11 6.14734 11 6.19434V6.45117C11 6.54443 10.9981 6.6378 10.9941 6.73047C10.9738 7.2018 10.9015 7.66501 10.7822 8.1123C10.78 8.12062 10.7776 8.12939 10.7754 8.1377C10.3631 9.65803 9.4015 10.9962 8.04395 11.8701C8.01739 11.8872 7.98261 11.8872 7.95605 11.8701C6.5985 10.9962 5.63687 9.65803 5.22461 8.1377C5.22236 8.12939 5.21999 8.12062 5.21777 8.1123C5.09847 7.66501 5.02623 7.2018 5.00586 6.73047C5.00186 6.6378 5 6.54443 5 6.45117V6.19434C5.00003 6.14734 5.04133 6.11116 5.08789 6.11719C5.71365 6.2011 6.33937 6.09235 6.8877 5.82031C7.27232 5.62943 7.61977 5.35764 7.90234 5.0166L8 4.89844L8.09766 5.0166ZM8 7.49414C7.75154 7.63307 7.49212 7.75105 7.22461 7.84668C7.39472 8.36103 7.6576 8.84078 8 9.26074C8.3424 8.84078 8.60528 8.36103 8.77539 7.84668C8.50788 7.75105 8.24846 7.63308 8 7.49414Z"
                />
                <path
                  class="v-icon-primary"
                  d="M9.75586 1.4491C10.4158 2.24548 11.4397 2.64613 12.4648 2.50867L15 2.16882V6.67078C15 9.73129 13.4446 12.5826 10.8711 14.2391L8.54102 15.7382H7.45898L5.12891 14.2391C2.55543 12.5826 1 9.73129 1 6.67078V2.16882L3.53516 2.50867C4.56027 2.64613 5.5842 2.24548 6.24414 1.4491L7.22949 0.259644H8.77051L9.75586 1.4491ZM7.78418 2.72546C6.68428 4.05269 4.97801 4.7202 3.26953 4.49109L3 4.45496V6.67078C3 9.05117 4.20936 11.2691 6.21094 12.5575L8 13.7089L9.78906 12.5575C11.7906 11.2691 13 9.05116 13 6.67078V4.45496L12.7305 4.49109C11.022 4.7202 9.31572 4.05269 8.21582 2.72546L8 2.46472L7.78418 2.72546Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="15.9989"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-notes"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M10 12H6V10H10V12ZM10 8H6V6H10V8Z"
                />
                <path
                  class="v-icon-primary"
                  d="M5 2H7V0H9V2H11V0H13V2H14V16H2V6H4V14H12V4H2V2H3V0H5V2Z"
                />
              </svg>
              L1 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-support-ticket"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M10 9.99609H8V5.99609H10V9.99609Z"
                />
                <path
                  class="v-icon-primary"
                  d="M16 1.99609V6.99609H15C14.4477 6.99609 14 7.44381 14 7.99609C14 8.54838 14.4477 8.99609 15 8.99609H16V13.9961H0V8.99609H1C1.55228 8.99609 2 8.54838 2 7.99609C2 7.44381 1.55228 6.99609 1 6.99609H0V1.99609H16ZM2 5.16699C3.16516 5.57885 4 6.6899 4 7.99609C4 9.30229 3.16516 10.4133 2 10.8252V11.9961H14V10.8252C12.8348 10.4133 12 9.30229 12 7.99609C12 6.6899 12.8348 5.57885 14 5.16699V3.99609H2V5.16699Z"
                />
              </svg>
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="navigation-drawer-with-icons-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="navigation-drawer-with-icons-account-sub-menu"
          >
            <li
              class="v-tab"
              id="navigation-drawer-with-icons-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="navigation-drawer-with-icons-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Navigation drawer with nested elements and section titles should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="navigation-drawer-with-nested-elements-and-section-titles"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="navigation-drawer-with-nested-elements-and-section-titles-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Drawer with nested elements and section titles"
      >
        <ul
          class="v-tabs v-tabs-vertical v-gap-8"
        >
          <li
            class="v-tab"
          >
            <h2
              class="v-tab v-tab-section-title"
            >
              L1 Section Title 1
            </h2>
            <ul
              class="v-tabs v-tabs-vertical"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 1
                </a>
              </li>
              <li
                class="v-tab"
              >
                <button
                  aria-controls="navigation-drawer-with-nested-elements-and-section-titles-l1-label2-sub-menu"
                  aria-expanded="false"
                  class="v-button v-button-tertiary"
                >
                  L1 label 2
                  <svg
                    aria-hidden="true"
                    class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="v-icon-primary"
                      d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                    />
                  </svg>
                </button>
                <div
                  class="v-tabs v-tabs-vertical v-hide"
                  id="navigation-drawer-with-nested-elements-and-section-titles-l1-label2-sub-menu"
                >
                  <h3
                    class="v-tab v-tab-section-title"
                  >
                    L2 Section Title 1
                  </h3>
                  <ul
                    class="v-tabs v-tabs-vertical"
                  >
                    <li
                      class="v-tab"
                    >
                      <a
                        class="v-button v-button-tertiary"
                        href="./navigation-drawer"
                      >
                        L2 label 1
                      </a>
                    </li>
                    <li
                      class="v-tab"
                    >
                      <button
                        aria-controls="navigation-drawer-with-nested-elements-and-section-titles-l2-label2-sub-menu"
                        aria-expanded="false"
                        class="v-button v-button-tertiary"
                      >
                        L2 label 2
                        <svg
                          aria-hidden="true"
                          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="v-icon-primary"
                            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                          />
                        </svg>
                      </button>
                      <div
                        class="v-tabs v-tabs-vertical v-hide"
                        id="navigation-drawer-with-nested-elements-and-section-titles-l2-label2-sub-menu"
                      >
                        <h4
                          class="v-tab v-tab-section-title"
                        >
                          L3 Section Title 1
                        </h4>
                        <ul
                          class="v-tabs v-tabs-vertical"
                        >
                          <li
                            class="v-tab"
                          >
                            <a
                              class="v-button v-button-tertiary"
                              href="./navigation-drawer"
                            >
                              L3 label 1
                            </a>
                          </li>
                          <li
                            class="v-tab"
                          >
                            <a
                              class="v-button v-button-tertiary"
                              href="./navigation-drawer"
                            >
                              L3 label 2
                            </a>
                          </li>
                        </ul>
                      </div>
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </li>
          <li
            class="v-tab"
          >
            <h2
              class="v-tab v-tab-section-title"
            >
              L1 Section Title 2
            </h2>
            <ul
              class="v-tabs v-tabs-vertical"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 3
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 4
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="navigation-drawer-with-nested-elements-and-section-titles-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="navigation-drawer-with-nested-elements-and-section-titles-account-sub-menu"
          >
            <li
              class="v-tab"
              id="navigation-drawer-with-nested-elements-and-section-titles-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="navigation-drawer-with-nested-elements-and-section-titles-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Navigation drawer with nested elements should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="navigation-drawer-with-nested-elements"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="navigation-drawer-with-nested-elements-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Drawer with nested elements"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <button
              aria-controls="navigation-drawer-with-nested-elements-l1-label2-sub-menu"
              aria-expanded="false"
              class="v-button v-button-tertiary v-ml-14"
            >
              L1 label 2
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
            </button>
            <ul
              aria-hidden="true"
              class="v-tabs v-tabs-vertical v-hide"
              id="navigation-drawer-with-nested-elements-l1-label2-sub-menu"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary v-ml-28"
                  href="./navigation-drawer"
                >
                  L2 label 1
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary v-ml-28"
                  href="./navigation-drawer"
                >
                  L2 label 2
                </a>
              </li>
            </ul>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <button
              aria-controls="navigation-drawer-with-nested-elements-l1-label4-sub-menu"
              aria-expanded="false"
              class="v-button v-button-tertiary v-ml-14"
            >
              L1 label 4
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
            </button>
            <ul
              aria-hidden="true"
              class="v-tabs v-tabs-vertical v-hide"
              id="navigation-drawer-with-nested-elements-l1-label4-sub-menu"
            >
              <li
                class="v-tab"
              >
                <button
                  aria-controls="navigation-drawer-with-nested-elements-l2-label1-sub-menu"
                  aria-expanded="false"
                  class="v-button v-button-tertiary v-ml-28"
                >
                  L2 label 1
                  <svg
                    aria-hidden="true"
                    class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="v-icon-primary"
                      d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                    />
                  </svg>
                </button>
                <ul
                  aria-hidden="true"
                  class="v-tabs v-tabs-vertical v-hide"
                  id="navigation-drawer-with-nested-elements-l2-label1-sub-menu"
                >
                  <li
                    class="v-tab"
                  >
                    <a
                      class="v-button v-button-tertiary v-ml-42"
                      href="./navigation-drawer"
                    >
                      L3 label 1
                    </a>
                  </li>
                  <li
                    class="v-tab"
                  >
                    <a
                      class="v-button v-button-tertiary v-ml-42"
                      href="./navigation-drawer"
                    >
                      L3 label 2
                    </a>
                  </li>
                  <li
                    class="v-tab"
                  >
                    <a
                      class="v-button v-button-tertiary v-ml-42"
                      href="./navigation-drawer"
                    >
                      L3 label 3
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary v-ml-14"
              href="./navigation-drawer"
            >
              L1 label 5
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="navigation-drawer-with-nested-elements-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="navigation-drawer-with-nested-elements-account-sub-menu"
          >
            <li
              class="v-tab"
              id="navigation-drawer-with-nested-elements-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="navigation-drawer-with-nested-elements-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Navigation drawer examples > Navigation drawer with section titles should render correctly 1`] = `
<div>
  <button
    class="v-button v-m-10"
  >
    Open drawer
  </button>
  <dialog
    aria-modal="true"
    class="v-panel v-mx-0"
    id="navigation-drawer-with-section-titles"
    style="--v-panel-inline-size: initial;"
  >
    <div
      class="v-nav v-nav-vertical v-nav-drawer"
      style="inline-size: 242px;"
    >
      <button
        aria-label="Close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-4"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <a
        aria-label="Visa Application Name Home"
        class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-16 v-ml-24 v-mr-16 v-mt-4"
        href="https://www.visa.com"
        id="navigation-drawer-with-section-titles-home-link"
        style="background-color: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-logo"
          height="23"
          viewBox="0 0 71 23"
          width="71"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="v-nav-app-name"
        >
          <p
            class="v-typography-subtitle-1"
          >
            Application Name
          </p>
        </div>
      </a>
      <nav
        aria-label="Drawer with section titles"
      >
        <ul
          class="v-tabs v-tabs-vertical"
        >
          <li
            class="v-tab"
          >
            <h2
              class="v-tab v-tab-section-title"
            >
              Section Title 1
            </h2>
            <ul
              class="v-tabs v-tabs-vertical"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 1
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 2
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 3
                </a>
              </li>
            </ul>
          </li>
          <li
            class="v-tab"
          >
            <h2
              class="v-tab v-tab-section-title"
            >
              Section Title 2
            </h2>
            <ul
              class="v-tabs v-tabs-vertical"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 4
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 5
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./navigation-drawer"
                >
                  L1 label 6
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-tab"
        >
          <button
            aria-controls="navigation-drawer-with-section-titles-account-sub-menu"
            aria-expanded="false"
            aria-label="Alex Miller"
            class="v-button v-button-large v-button-tertiary"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-account"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
              />
              <path
                class="v-icon-primary"
                d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
              />
            </svg>
            Alex Miller
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            class="v-tabs v-tabs-vertical v-hide"
            id="navigation-drawer-with-section-titles-account-sub-menu"
          >
            <li
              class="v-tab"
              id="navigation-drawer-with-section-titles-account-sub-item-0"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 1
              </a>
            </li>
            <li
              class="v-tab"
              id="navigation-drawer-with-section-titles-account-sub-item-1"
            >
              <a
                class="v-button v-button-tertiary"
                href="./navigation-drawer"
              >
                L2 label 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;
